tests/compile_fail/scope_callback_outer.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/scope_callback_outer.rs:11:17
   |
9  |     let mut outer: Option<Table> = None;
   |         --------- ...so that variable is valid at time of its declaration
10 |     lua.scope(|scope| -> Result<()> {
   |               --------------------- borrowed data cannot outlive this closure
11 |         let f = scope
   |                 ^^^^^ cannot be stored outside of its closure
12 |             .create_function_mut(|_, t: Table| {
   |              ------------------- cannot infer an appropriate lifetime...
